<resources>
    <string name="app_name">Track-mo-lotto</string>
    <string name="otp_message">An OTP has been sent to the registered number. Please enter it below.</string>
    <string name="otp_callback">Did not receive the OTP ?</string>
    <string name="otp_resend">RESEND OTP</string>
    <string name="otp_button">Verify OTP</string>
    <string name="title_activity_maps">Map</string>
</resources>
